[gd_scene load_steps=7 format=3 uid="uid://cu4ptfibfkx75"]

[ext_resource type="Script" path="res://scripts/player/Player.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://q06xyvolh6c4" path="res://player/player.png" id="2"]
[ext_resource type="Texture2D" uid="uid://w2k45myk435e" path="res://textures/light.png" id="3"]
[ext_resource type="Theme" uid="uid://caja5ekj3jrl" path="res://themes/theme.tres" id="4"]

[sub_resource type="RectangleShape2D" id="1"]
size = Vector2(54, 54)

[sub_resource type="ParticleProcessMaterial" id="4"]
emission_shape = 1
emission_sphere_radius = 20.0
gravity = Vector3(0, 0, 0)
radial_accel_max = 60.0
scale_min = 4.0
scale_max = 5.0
color = Color(1, 0, 0, 1)
hue_variation_max = 0.31

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1")

[node name="collisionShape" type="CollisionShape2D" parent="."]
shape = SubResource("1")

[node name="sprite" type="Sprite2D" parent="."]
texture = ExtResource("2")

[node name="timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="enduranceTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="cooldownTimer" type="Timer" parent="."]
one_shot = true

[node name="particles" type="GPUParticles2D" parent="."]
show_behind_parent = true
emitting = false
amount = 55
process_material = SubResource("4")
lifetime = 0.5
randomness = 0.5

[node name="torch" type="PointLight2D" parent="."]
visible = false
texture = ExtResource("3")
texture_scale = 3.5

[node name="playerNumber" type="Label" parent="."]
visible = false
light_mask = 2
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = 3.0
offset_right = 20.0
offset_bottom = 27.0
theme = ExtResource("4")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 15
text = "P2"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="end_game" from="." to="." method="_on_Player_end_game"]
